#166: Fixed heading styles
Fixed main (Maps and data) heading: cramped and wrong font size.
Rationalised all heading levels, which had been hacked to make h1 appear
like OEH h2 etc.
Updated styles_v2.css to styles_v3.css. Moved heading bg image to oeh
dir.
Deleted unnecessary Div1 spacer.

--- a/web-client/src/main/resources/apps/tabsearch/css/Custom.css
+++ b/web-client/src/main/resources/apps/tabsearch/css/Custom.css
@@ -19,12 +19,16 @@ body, p, td, li, th {
 	text-align: center;
 	font-size: 18px;
 }
+
 h1 {
+	padding: 0 0 0px 23px;
+	font-size: 21px;
+	margin-top: 12px;
+}
+#mainContainer03 h2 {
 	color: #d67001;
-	background-image: none;
 	font-size: 16px;
-	font-weight: 700;
-	font-family: Arial, Helvetica, sans-serif;
+	margin-top: 0px;
 }
 
 #GNtabs .x-tab-right {
@@ -96,29 +100,16 @@ div.GIS-feature {
 	width: 195px;
 	margin: 0px 11px 13px 12px;
 }
-div.GIS-feature h2 {
-	height: initial;
+div.GIS-feature h3 {
 	width: 195px;
 	padding: 0 0 0 10px;
 	font-size: 1.05em;
-	color: #D66B03;
 	margin: 20px 0 3px;
-	background: url(../images/bgFeatureH2.png) left 4px no-repeat;
+	background: url(../images/oeh/bgFeatureH3.png) left 4px no-repeat;
 }
 #title-arrow {
 	margin-right: 5px;
 	vertical-align: baseline;
-}
-div.GIS-feature h2 a, div.GIS-feature h2 a:visited {
-	display: block;
-	color: #d66b03;
-	background: url(../images/bgFeatureH2.png) left 4px no-repeat;
-	padding-left: 10px;
-	text-decoration: none;
-	font-size: 1.2em;
-	font-weight: normal;
-	position: absolute;
-	bottom: 3px;
 }
 div.GIS-feature p {
 	padding: 4px 9px;
@@ -185,9 +176,7 @@ div.GIS-feature .ImgBg {
 	width: 990px;
 	position: relative;
 }
-div.GIS-feature h2 a:hover, div.GIS-feature p.feature-link a:hover, div.other-feature p a:hover {
-	text-decoration: underline;
-}
+
 .tip1 {
 	position: fixed;
 }
